[B]Version 5.0.54 (February 21, 2020)[/B]
- Code Base Changes:
    - none
- Resolvers Added:
    - none
- Resolvers Fixed/Updated:
    - gounlimited
    - myviru
- Resolvers Removed
    - thevideo_me
- Languages Added/Updated
    - none

[B]Version 5.0.53 (February 11, 2020)[/B]
- Code Base Changes:
    - none
- Resolvers Added:
    - thevideo_me
- Resolvers Fixed/Updated:
    - vevio
- Resolvers Removed
    - none
- Languages Added/Updated
    - none

[B]Version 5.0.52 (February 6, 2020)[/B]
- Code Base Changes:
    - none
- Resolvers Added:
    - none
- Resolvers Fixed/Updated:
    - mixdrop
    - mystream
- Resolvers Removed
    - none
- Languages Added/Updated
    - none

[B]Version 5.0.51 (January 23, 2020)[/B]
- Code Base Changes:
    - none
- Resolvers Added:
    - liveleak
- Resolvers Fixed/Updated:
    - hxload
    - mixdrop
    - mp4upload
- Resolvers Removed
    - none
- Languages Added/Updated
    - none

[B]Version 5.0.49 (January 14, 2020)[/B]
- Code Base Changes:
    - none
- Resolvers Added:
    - none
- Resolvers Fixed/Updated:
    - fembed
    - gounlimited
    - prostream
    - supervideo
    - upstream
- Resolvers Removed
    - blazefile
    - movierulz
    - videomega
- Languages Added/Updated
    - none

[B]Version 5.0.48 (January 2, 2020)[/B]
- Code Base Changes:
    - none
- Resolvers Added:
    - brighteon
    - prostream
    - supervideo
    - truhd
    - upstream
- Resolvers Fixed/Updated:
    - fembed
    - mixdrop
- Resolvers Removed
    - streamcloud
    - streamcloudco
- Languages Added/Updated
    - none

[B]Version 5.0.47 (December 18, 2019)[/B]
- Code Base Changes:
    - removed dependency
- Resolvers Added:
    - none
- Resolvers Fixed/Updated:
    - mixdrop
- Resolvers Removed
    - none
- Languages Added/Updated
    - none

[B]Version 5.0.46 (December 12, 2019)[/B]
- Code Base Changes:
    - none
- Resolvers Added:
    - pixeldrain
- Resolvers Fixed/Updated:
    - chromecast
    - fembed
- Resolvers Removed
    - none