@@ -36,10 +36,9 @@ class VideaResolver(UrlResolver):
         sources = helpers.get_dom(html, 'video_sources')
         if sources:
             sources = re.findall('name\s*=\s*[\'|"]([^\'"]+).+?streamable.+?>([^<]+)', sources[0])
-            if sources[-1][0].lower() == 'lq': sources = sources[::-1]
-            source = helpers.pick_source(sources)
+            source = helpers.pick_source(helpers.sort_sources_list(sources))
             if source.startswith('//'): source = 'http:' + source
-            return source
+            return source.replace('&amp;', '&')
 
         raise ResolverError('Stream not found')
 
